--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "construct",
+  "name": "constructjs",
   "version": "1.0.0",
   "description": "A NodeJS based data generator. This returns an infinite amount of randomly generated data according to a structure or inserts it into a database system.",
   "contributors": [
