- fix package.json

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "contributors": [
     "Robbyn Gerhardt <r.gerhardt@team-braeutigam.de>"
   ],
-  "bugs": "https://github.com/RGerhardt-Pressmind/constructs.js/issues",
-  "homepage": "https://rgerhardt-pressmind.github.io/constructs.js",
+  "bugs": "https://github.com/RGerhardt-Pressmind/constructs-js/issues",
+  "homepage": "https://rgerhardt-pressmind.github.io/constructs-js/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/RGerhardt-Pressmind/constructs.js.git"
+    "url": "https://github.com/RGerhardt-Pressmind/constructs-js.git"
   },
   "main": "index.js",
   "scripts": {
