--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "browserify index.js -s constructs -o dist/constructs.js && minify dist/constructs.js > dist/constructs.min.js"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry":"https://registry.npmjs.org"
   },
   "keywords": [
     "nodejs",
